# cmake_mini_proj

./: CMakeLists.txt  README.md  build_clean.sh
doc/: hello.txt
include/: test_func.h
include/mem/: memory.h
include/net/: ip.h  network.h  tcp.h
src/: CMakeLists.txt  main.c  test_func.c
src/mem/: memory.c
src/net/: network.c
src/net/ip/: ip.c
src/net/tcp/: tcp.c
